Initial drop of assignment 1

--- a/prompt-eng/chain_of_thought.ipynb
+++ b/prompt-eng/chain_of_thought.ipynb
@@ -45,18 +45,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n",
-      "Time taken: 4.302s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "##\n",
     "## CHAIN-OF-THOUGHT  PROMPTING\n",
@@ -66,24 +57,17 @@
     "\n",
     "\n",
     "#### (1) Adjust the inbounding  Prompt, simulating inbounding requests from users or other systems\n",
-    "MESSAGE = \"200\"\n",
+    "MESSAGE = \"cars, trucks, motorcycles\"\n",
     "\n",
-    "#### (2) Adjust the Prompt Engineering Technique to be applied, simulating Workflow Templates\n",
-    "CHAIN_OF_THOUGHT = \\\n",
-    "f\"\"\"\n",
-    "The odd numbers in this group add up to an even number: 4, 8, 9, 15, 12, 2, 1.\n",
-    "A: Adding all the odd numbers (9, 15, 1) gives 25. The answer is False.\n",
-    "The odd numbers in this group add up to an even number: 17,  10, 19, 4, 8, 12, 24.\n",
-    "A: Adding all the odd numbers (17, 19) gives 36. The answer is True.\n",
-    "The odd numbers in this group add up to an even number: 16,  11, 14, 4, 8, 13, 24.\n",
-    "A: Adding all the odd numbers (11, 13) gives 24. The answer is True.\n",
-    "The odd numbers in this group add up to an even number: 17,  9, 10, 12, 13, 4, 2.\n",
-    "A: Adding all the odd numbers (17, 9, 13) gives 39. The answer is False.\n",
-    "Now Add all odd numbers until {MESSAGE} and let me know. \n",
-    "Provide only the answer, no explanation!\n",
+    "CHAIN_OF_THOUGHT = f\"\"\"\n",
+    "I have a list of fruits: apple, banana, orange.  If I add another fruit, like a grape, the list becomes: apple, banana, orange, grape.\n",
+    "I have a list of colors: red, blue, green. If I add another color, like yellow, the list becomes: red, blue, green, yellow.\n",
+    "I have a list of numbers: 1, 2, 3. If I add another number, like 4, the list becomes: 1, 2, 3, 4.\n",
+    "I have a list of animals: cat, dog, bird. If I add another animal, like fish, the list becomes: cat, dog, bird, fish.\n",
+    "Now I have a list of {MESSAGE}. What does the list become if I add one more element to it? Provide only the final list with the new element, no explanation!\n",
     "\"\"\"\n",
     "\n",
-    "PROMPT = CHAIN_OF_THOUGHT \n",
+    "PROMPT = CHAIN_OF_THOUGHT\n",
     "\n",
     "#### (3) Configure the Model request, simulating Workflow Orchestration\n",
     "# Documentation: https://github.com/ollama/ollama/blob/main/docs/api.md\n",
@@ -99,6 +83,13 @@
     "time, response = model_req(payload=payload)\n",
     "print(response)\n",
     "if time: print(f'Time taken: {time}s')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "cars, trucks, motorcycles, bicycles"
    ]
   }
  ],
