--- a/prompt-eng/meta.ipynb
+++ b/prompt-eng/meta.ipynb
@@ -11,6 +11,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Meta Prompting\n",
     "\n",
@@ -41,21 +46,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "To calculate this, we need to know that the logarithm of 2 (base 10) is approximately 0.301.\n",
-      "\n",
-      "So,\n",
-      "\n",
-      "984 * log(2) ≈ 984 * 0.301\n",
-      "≈ 295.584\n",
-      "Time taken: 5.399s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "##\n",
     "## META PROMPTING\n",
@@ -64,7 +55,64 @@
     "from _pipeline import create_payload, model_req\n",
     "\n",
     "#### (1) Adjust the inbounding  Prompt, simulating inbounding requests from users or other systems\n",
-    "MESSAGE = \"What is 984 * log(2)\"\n",
+    "MESSAGE = \"\"\"\n",
+    "[CONTEXT]\n",
+    "We are going to create one of the best ChatGPT prompts ever written. The best prompts include comprehensive details to fully inform the Large Language \n",
+    "Model of the prompt’s: goals, required areas of expertise, domain knowledge, preferred format, target audience, references, examples, and the best \n",
+    "approach to accomplish the objective. Based on this and the following information, you will be able write this exceptional prompt.\n",
+    "[ROLE]\n",
+    "You are an LLM prompt generation expert. You are known for creating extremely detailed prompts which result in LLM outputs far exceeding typical LLM \n",
+    "responses. The prompts you write leave nothing to question because they are both highly thoughtful and extensive.\n",
+    "[ACTION]\n",
+    "1) Before you begin writing this prompt, you will first look to receive the prompt topic or theme. If I don’t provide the topic or theme for you, please request it.\n",
+    "2) Once you are clear about the topic or theme, please also review the Format and Example provided below.\n",
+    "3) If necessary, the prompt should include “fill in the blank” elements for the user to populate based on their needs.\n",
+    "4) Take a deep breath and take it one step at a time.\n",
+    "5) Once you’ve ingested all of the information, write the best prompt ever created.\n",
+    "[FORMAT]\n",
+    "For organizational purposes, you will use an acronym called “C.R.A.F.T.” where each letter of the acronym CRAFT represents a section of the prompt. \n",
+    "Your format and section descriptions for this prompt development are as follows:\n",
+    "Context: This section describes the current context which outlines the situation for which the prompt is needed. It helps the LLM understand what \n",
+    "knowledge and expertise it should reference when creating the prompt.\n",
+    "Role: This section defines the type of experience the LLM has, its skill set, and its level of expertise relative to the prompt requested. In all cases, the role \n",
+    "described will need to be an industry-leading expert with more than two decades or relevant experience and thought leadership.\n",
+    "Action: This is the action the prompt will ask the LLM to take. It should be a numbered list of sequential steps which will make the most sense for an LLM \n",
+    "to follow in order to maximize success.\n",
+    "Format: This refers to the structural arrangement or presentation style of the LLM’s generated content. It determines how information is organized, \n",
+    "displayed, or encoded to meet specific user preferences or requirements. Format types include: An essay, a table, a coding language, plain text, \n",
+    "markdown, a summary, a list, etc.\n",
+    "Target Audience: This will be the ultimate consumer of the output your prompt creates. It can include demographic information, geographic information, \n",
+    "language spoken, reading level, preferences, etc.\n",
+    "[TARGET AUDIENCE]\n",
+    "The target audience for this prompt creation is {fill in a persona with attributes} and the model leveraged includes {ChatGPT 4o} or {Claude Sonnet}.\n",
+    "[EXAMPLE]\n",
+    "Here is an Example of a CRAFT Prompt for your reference:\n",
+    "**Context:**\n",
+    "You are tasked with creating a detailed guide to help individuals set, track, and achieve monthly goals. The purpose of this guide is to break down larger \n",
+    "objectives into manageable, actionable steps that align with a person’s overall vision for the year. The focus should be on maintaining consistency, \n",
+    "overcoming obstacles, and celebrating progress while using proven techniques like SMART goals (Specific, Measurable, Achievable, Relevant, Time￾bound).\n",
+    "**Role:**\n",
+    "You are an expert productivity coach with over two decades of experience in helping individuals optimize their time, define clear goals, and achieve \n",
+    "sustained success. You are highly skilled in habit formation, motivational strategies, and practical planning methods. Your writing style is clear, motivating, \n",
+    "and actionable, ensuring readers feel empowered and capable of following through with your advice.\n",
+    "**Action:**\n",
+    "1. Begin with an engaging introduction which explains why setting monthly goals is effective for personal and professional growth. Highlight the benefits of \n",
+    "short-term goal planning.\n",
+    "2. Provide a step-by-step guide to breaking down larger annual goals into focused monthly objectives.\n",
+    "3. Offer actionable strategies for identifying the most important priorities for each month.\n",
+    "4. Introduce techniques to maintain focus, track progress, and adjust plans if needed.\n",
+    "5. Include examples of monthly goals for common areas of life (e.g., health, career, finances, personal development).\n",
+    "6. Address potential obstacles, like procrastination or unexpected challenges, and how to overcome them.\n",
+    "7. End with a motivational conclusion that encourages reflection and continuous improvement.\n",
+    "**Format:**\n",
+    "Write the guide in plain text, using clear headings and subheadings for each section. Use numbered or bulleted lists for actionable steps and include \n",
+    "practical examples or case studies to illustrate your points.\n",
+    "**Target Audience:**\n",
+    "The target audience includes working professionals and entrepreneurs aged 25-55 who are seeking practical, straightforward strategies to improve their \n",
+    "productivity and achieve their goals. They are self-motivated individuals who value structure and clarity in their personal development journey. They prefer \n",
+    "reading at a 6th grade level. -End example- Please reference the example I have just provided for your output. Again, take a deep breath and take it one \n",
+    "step at a time.\n",
+    "\"\"\"\n",
     "\n",
     "#### (2) Adjust the Prompt Engineering Technique to be applied, simulating Workflow Templates\n",
     "\n",
@@ -85,6 +133,53 @@
     "time, response = model_req(payload=payload)\n",
     "print(response)\n",
     "if time: print(f'Time taken: {time}s')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For the following user prompt = Guide teachers through generating well-structured, engaging worksheets that complement their lesson plans and reinforce key learning objectives\n",
+    "\n",
+    "The Meta Prompt Generates:\n",
+    "\n",
+    "Context:\n",
+    "\n",
+    "Teachers are constantly seeking effective ways to reinforce learning and assess student understanding. Worksheets, when designed thoughtfully, can be valuable tools in this process.  This prompt aims to guide teachers in creating high-quality worksheets that align with their lesson plans and actively engage students in the learning process.  The goal is to move beyond rote memorization and encourage critical thinking, problem-solving, and application of knowledge.  The worksheets should be easily adaptable to different subjects and grade levels.\n",
+    "\n",
+    "Role:\n",
+    "\n",
+    "You are an experienced instructional designer and curriculum specialist with over two decades of experience in developing engaging and effective learning materials. You have a deep understanding of pedagogical principles, learning styles, and assessment strategies. Your expertise lies in creating resources that not only impart knowledge but also foster critical thinking and deeper understanding. You are adept at translating complex educational concepts into practical, actionable advice for teachers. Your writing style is clear, concise, and inspiring, empowering teachers to create impactful learning experiences for their students.\n",
+    "\n",
+    "Action:\n",
+    "\n",
+    "Begin by emphasizing the importance of aligning worksheets with specific learning objectives and lesson plans. Explain how well-designed worksheets can enhance learning and provide valuable assessment data.\n",
+    "Provide a step-by-step guide to creating effective worksheets, including:\n",
+    "Defining clear learning objectives for the worksheet.\n",
+    "Selecting appropriate question types (e.g., multiple-choice, open-ended, problem-solving, creative prompts) that align with the objectives. Discuss the strengths and weaknesses of different question types.\n",
+    "Structuring the worksheet logically and progressively, moving from simpler to more complex tasks.\n",
+    "Incorporating visual elements (e.g., diagrams, images, charts) to enhance understanding and engagement.\n",
+    "Designing activities that promote critical thinking, application of knowledge, and problem-solving.\n",
+    "Offering strategies for differentiating worksheets to meet the needs of diverse learners.\n",
+    "Provide examples of well-structured worksheets for different subjects and grade levels. These examples should illustrate the principles discussed in the guide.\n",
+    "Offer practical tips for making worksheets engaging and interactive, such as:\n",
+    "Using real-world scenarios and examples.\n",
+    "Incorporating games or puzzles.\n",
+    "Encouraging collaboration and peer learning.\n",
+    "Providing opportunities for self-assessment and reflection.\n",
+    "Address common pitfalls to avoid when creating worksheets, such as:\n",
+    "Overly complex or confusing instructions.\n",
+    "Too much emphasis on rote memorization.\n",
+    "Lack of alignment with learning objectives.\n",
+    "Poorly designed layouts that distract or confuse students.\n",
+    "Conclude by encouraging teachers to experiment with different worksheet designs and gather feedback from students to continuously improve their effectiveness.\n",
+    "Format:\n",
+    "\n",
+    "Write the guide in plain text, using clear headings and subheadings for each section. Use numbered or bulleted lists for actionable steps and include practical examples or case studies to illustrate your points.  Use bold text for key terms and concepts.\n",
+    "\n",
+    "Target Audience:\n",
+    "\n",
+    "The target audience is K-12 teachers across all subjects. They are busy professionals who need practical, easy-to-implement strategies for creating effective worksheets. They appreciate clear, concise instructions and real-world examples. They prefer reading at a 7th-grade level."
    ]
   }
  ],
