--- a/prompt-eng/self_consistency.ipynb
+++ b/prompt-eng/self_consistency.ipynb
@@ -40,21 +40,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "To calculate this, we need to know that the logarithm of 2 (base 10) is approximately 0.301.\n",
-      "\n",
-      "So,\n",
-      "\n",
-      "984 * log(2) ≈ 984 * 0.301\n",
-      "≈ 295.584\n",
-      "Time taken: 5.399s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "##\n",
     "## ZERO SHOT PROMPTING\n",
@@ -63,7 +49,7 @@
     "from _pipeline import create_payload, model_req\n",
     "\n",
     "#### (1) Adjust the inbounding  Prompt, simulating inbounding requests from users or other systems\n",
-    "MESSAGE = \"What is 984 * log(2)\"\n",
+    "MESSAGE = \"Provide 5 different summaries of Article 1 of the United States Constitution.  Each summary should be no more than 2 lines and cover the key points.\"\n",
     "\n",
     "#### (2) Adjust the Prompt Engineering Technique to be applied, simulating Workflow Templates\n",
     "\n",
@@ -84,6 +70,21 @@
     "time, response = model_req(payload=payload)\n",
     "print(response)\n",
     "if time: print(f'Time taken: {time}s')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1.  Legislative power resides in a bicameral Congress, composed of a Senate and House of Representatives.  Congress is responsible for making laws.\n",
+    "\n",
+    "2.  The Constitution establishes the structure and powers of the legislative branch.  It details how members of Congress are elected and what their responsibilities are.\n",
+    "\n",
+    "3.  Article I outlines the organization of Congress and its specific powers, including declaring war, regulating commerce, and collecting taxes.  It also sets limits on Congressional power.\n",
+    "\n",
+    "4.  Congress, as the legislative body, is granted enumerated powers, meaning those specifically listed in the Constitution.  This article defines those powers.\n",
+    "\n",
+    "5.  Article I creates the Senate and House, defining their roles in the legislative process.  It establishes how laws are made and the qualifications for serving in Congress.\n"
    ]
   }
  ],
