--- a/prompt-eng/few_shots.ipynb
+++ b/prompt-eng/few_shots.ipynb
@@ -38,22 +38,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "To calculate 984 * log(2), we need to find the logarithm of 2 first.\n",
-      "\n",
-      "The base-10 logarithm of 2 (log10(2)) is approximately 0.30103.\n",
-      "\n",
-      "Now, multiply 984 by this result:\n",
-      "\n",
-      "984 * 0.30103 ≈ 296.65\n",
-      "Time taken: 4.363s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "##\n",
     "## FEW SHOTS PROMPTING\n",
@@ -62,10 +47,11 @@
     "from _pipeline import create_payload, model_req\n",
     "\n",
     "#### (1) Adjust the inbounding  Prompt, simulating inbounding requests from users or other systems\n",
-    "MESSAGE = \"Calculate 984 * log(2)\"\n",
+    "MESSAGE = \"Bill ran away when he saw a bully.\"\n",
     "\n",
     "#### (2) Adjust the Prompt Engineering Technique to be applied, simulating Workflow Templates\n",
-    "FEW_SHOT = \"You are a math teacher. If student asked 1 + 1 you answer 2. If student ask 987 * 2 you answer only 1974. Student asked; provide the result only: \"\n",
+    "FEW_SHOT = \"\"\"You are a data engineer.   Perform sentiment analysis and store in a Json object with the following format : {\"sa\":\"result\"} where 'result' is POSITIVE or NEGATIVE.  Johnny was excited to go to the fair. {\"sa\", \"POSITIVE\" }.  Mary hates the dentist. { \"sa\", \"NEGATIVE\" }. \n",
+    " Analyze the following sentence :\"\"\"\n",
     "PROMPT = FEW_SHOT + '\\n' + MESSAGE \n",
     "\n",
     "#### (3) Configure the Model request, simulating Workflow Orchestration\n",
@@ -82,6 +68,13 @@
     "time, response = model_req(payload=payload)\n",
     "print(response)\n",
     "if time: print(f'Time taken: {time}s')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "{\"sa\": \"NEGATIVE\"}"
    ]
   },
   {
