--- a/prompt-eng/prompt_template.ipynb
+++ b/prompt-eng/prompt_template.ipynb
@@ -59,11 +59,11 @@
     "from _pipeline import create_payload, model_req\n",
     "\n",
     "#### (1) Adjust the inbounding  Prompt, simulating inbounding requests from users or other systems\n",
-    "MESSAGE = \"984 * log(2)\"\n",
+    "MESSAGE = \"An alligator that has made his home in a local golf community pond was found recently munching on a residents pet cat.\"\n",
     "\n",
     "#### (2) Adjust the Prompt Engineering Technique to be applied, simulating Workflow Templates\n",
-    "TEMPLATE_BEFORE=\"Act like you are a math teacher. Answer to this question from an student:\"\n",
-    "TEMPLATE_AFTER=\"Provide the answer only. No explanations!\"\n",
+    "TEMPLATE_BEFORE=\"You are a copy editor of a local newspaper. Prepare the paper for this recent news:\"\n",
+    "TEMPLATE_AFTER=\"Provide the article title only. Make it grab peoples attention!\"\n",
     "PROMPT = TEMPLATE_BEFORE + '\\n' + MESSAGE + '\\n' + TEMPLATE_AFTER\n",
     "\n",
     "#### (3) Configure the Model request, simulating Workflow Orchestration\n",
